--- a/deploy/k8s/service.yaml
+++ b/deploy/k8s/service.yaml
@@ -5,7 +5,7 @@ metadata:
   name: usuario-test-front
 spec:
   selector: 
-    app: usuario-test-front
+    app: usuario-front
   ports:
     - protocol: TCP
       port: 80
